sgd/reproduction/playground/objects/SVMXC__Task_Template__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>This object stores reusable task templates and a list of tasks, separated by record type. Task templates are used in preventive maintenance.</description>
    <fields>
        <fullName>SVMXC__Description__c</fullName>
        <description>Enter Description</description>
        <inlineHelpText>Enter Description</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Priority__c</fullName>
        <description>Select the task priority.</description>
        <inlineHelpText>Select the task priority.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Task_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the Task Template.</description>
        <inlineHelpText>Select the Task Template.</inlineHelpText>
        <label>Work Order Purpose</label>
        <referenceTo>SVMXC__Task_Template__c</referenceTo>
        <relationshipLabel>Task Templates</relationshipLabel>
        <relationshipName>Task_templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Task_Title__c</fullName>
        <description>Subject of the task</description>
        <inlineHelpText>Task Title</inlineHelpText>
        <label>Task Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Template_Name__c</fullName>
        <description>Name of the task template</description>
        <inlineHelpText>Template Name</inlineHelpText>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Template_Type__c</fullName>
        <description>Select the type of template.</description>
        <inlineHelpText>Select the type of template.</inlineHelpText>
        <label>Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Preventive Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Task Template</label>
    <listViews>
        <fullName>SVMXC__All_Work_Templates</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Template_Name__c</columns>
        <columns>SVMXC__Template_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Templates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TT-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Templates</pluralLabel>
    <recordTypes>
        <fullName>SVMXC__Tasks</fullName>
        <active>true</active>
        <description>Tasks</description>
        <label>Tasks</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__Templates</fullName>
        <active>true</active>
        <description>Task Templates</description>
        <label>Templates</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>